--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -3,7 +3,7 @@ name: Deploy API
 on:
   push:
     branches:
-      - main
+      - company
 
 jobs:
   build-and-deploy:
@@ -53,6 +53,8 @@ jobs:
           echo "BUCKET_NAME_USER_AVATAR=${{ secrets.BUCKET_NAME_USER_AVATAR }}" >> $GITHUB_ENV
           echo "BUCKET_NAME_ROOM_IMAGE=${{ secrets.BUCKET_NAME_ROOM_IMAGE }}" >> $GITHUB_ENV
 
+        
+
     - name: Run Tests
       run: |
         pytest
@@ -60,13 +62,13 @@ jobs:
     - name: Install sshpass
       run: sudo apt-get install -y sshpass
 
-    # - name: Deploy to Server
-    #   env:
-    #     SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-    #     SSH_HOST: ${{ secrets.SSH_HOST }}
-    #     SSH_USER: ${{ secrets.SSH_USER }}
-    #   run: |
-    #     sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "
-    #     cd /home/$SSH_USER/api && \
-    #     ./key_git_script"
+    - name: Deploy to Server
+      env:
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        SSH_HOST: ${{ secrets.SSH_HOST }}
+        SSH_USER: ${{ secrets.SSH_USER }}
+      run: |
+        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "
+        cd /home/$SSH_USER/api && \
+        ./key_git_script"
     
