--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,18 +53,18 @@ jobs:
           echo "BUCKET_NAME_USER_AVATAR=${{ secrets.BUCKET_NAME_USER_AVATAR }}" >> $GITHUB_ENV
           echo "BUCKET_NAME_ROOM_IMAGE=${{ secrets.BUCKET_NAME_ROOM_IMAGE }}" >> $GITHUB_ENV
 
-    - name: Run Tests
-      run: |
-        pytest
+    # - name: Run Tests
+    #   run: |
+    #     pytest
 
-    - name: Install sshpass
-      run: sudo apt-get install -y sshpass
+    # - name: Install sshpass
+    #   run: sudo apt-get install -y sshpass
 
     # - name: Deploy to Server
     #   env:
     #     SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
     #     SSH_HOST: ${{ secrets.SSH_HOST }}
-    #     SSH_USER: ${{ secrets.SSH_USER }}
+        # SSH_USER: ${{ secrets.SSH_USER }}
     #   run: |
     #     sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "
     #     cd /home/$SSH_USER/api && \
