--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,8 +67,5 @@ jobs:
         SSH_USER: ${{ secrets.SSH_USER }}
       run: |
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "
-        eval \$(ssh-agent -s) && \
-        ssh-add ~/.ssh/git_conect_key && \
         cd /home/$SSH_USER/api && \
-        git pull origin main && \
-        echo $SSH_PASSWORD | sudo -S systemctl restart api.service"
+        ./key_git_script"
