--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ MANIFEST
 .env*
 sinuous-grove-405612-a7d9d516c960.json
 _log
+users_data.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
