--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -34,9 +34,11 @@ jobs:
           echo "MAIL_FROM_NAME_COMPANY=${{ secrets.MAIL_FROM_NAME_COMPANY }}" >> $GITHUB_ENV
           echo "DATABASE_HOSTNAME=${{ secrets.DATABASE_HOSTNAME }}" >> $GITHUB_ENV
           echo "DATABASE_HOSTNAME_COMPANY=${{ secrets.DATABASE_HOSTNAME_COMPANY }}" >> $GITHUB_ENV
+          echo "DATABASE_HOSTNAME_TEST=${{ secrets.DATABASE_HOSTNAME_TEST }}" >> $GITHUB_ENV
           echo "DATABASE_PORT=${{ secrets.DATABASE_PORT }}" >> $GITHUB_ENV
           echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> $GITHUB_ENV
           echo "DATABASE_PASSWORD_COMPANY=${{ secrets.DATABASE_PASSWORD_COMPANY }}" >> $GITHUB_ENV
+          echo "DATABASE_PASSWORD_TEST=${{ secrets.DATABASE_PASSWORD_TEST }}" >> $GITHUB_ENV
           echo "DATABASE_NAME=${{ secrets.DATABASE_NAME }}" >> $GITHUB_ENV
           echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}" >> $GITHUB_ENV
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> $GITHUB_ENV
@@ -48,6 +50,7 @@ jobs:
           echo "BACKBLAZE_KEY=${{ secrets.BACKBLAZE_KEY }}" >> $GITHUB_ENV
           echo "URL_ADDRESS_DNS=${{ secrets.URL_ADDRESS_DNS }}" >> $GITHUB_ENV
           echo "URL_ADDRESS_DNS_COMPANY=${{ secrets.URL_ADDRESS_DNS_COMPANY }}" >> $GITHUB_ENV
+          echo "URL_ADDRESS_DNS_TEST=${{ secrets.URL_ADDRESS_DNS_TEST }}" >> $GITHUB_ENV
           echo "KEY_CRYPTO=${{ secrets.KEY_CRYPTO }}" >> $GITHUB_ENV
           echo "ROUT_IMAGE=${{ secrets.ROUT_IMAGE }}" >> $GITHUB_ENV
           echo "BUCKET_NAME_USER_AVATAR=${{ secrets.BUCKET_NAME_USER_AVATAR }}" >> $GITHUB_ENV
@@ -59,17 +62,49 @@ jobs:
       run: |
         pytest
 
+
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME_TEST }}
+        password: ${{ secrets.DOCKER_PASSWORD_TEST }}
+
+    - name: Build and push Docker image
+      run: |
+        docker build -t nevojt/api_test:latest .
+        docker push nevojt/api_test:latest
+
     - name: Install sshpass
       run: sudo apt-get install -y sshpass
 
     - name: Deploy to Server
       env:
-        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD_COMPANY }}
-        SSH_HOST: ${{ secrets.SSH_HOST_COMPANY }}
-        SSH_USER: ${{ secrets.SSH_USER_COMPANY }}
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD_TEST }}
+        SSH_HOST: ${{ secrets.SSH_HOST_TEST }}
+        SSH_USER: ${{ secrets.SSH_USER_TEST }}
       run: |
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "
-        cd /home/$SSH_USER/api && \
-        ./key_git_script"
+        docker pull nevojt/api_test:latest;
+        
+
+        docker stop api_test_1 || true;
+        docker rm api_test_1 || true;
+        docker stop api_test_2 || true;
+        docker rm api_test_2 || true;
+        docker stop api_test_3 || true;
+        docker rm api_test_3 || true;
+        docker stop api_test_4 || true;
+        docker rm api_test_4 || true;
+        
+        docker run -d --name api_test_1 --env-file /home/test/api/.env -p 8000:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
+        docker run -d --name api_test_2 --env-file /home/test/api/.env -p 8001:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
+        docker run -d --name api_test_3 --env-file /home/test/api/.env -p 8002:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
+        docker run -d --name api_test_4 --env-file /home/test/api/.env -p 8003:8000 --cpus="1" --memory="512m" nevojt/api_test:latest
+        "
+
     
 
