--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
-services: 
-  api:
+services:
+  fastapi:
     build: .
     ports:
-      - 8800:8800
+      - "8000:8000"
+    env_file:
+      - .env
