--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -109,7 +109,7 @@ jobs:
       env:
         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD_PABLIC_1 }}
         SSH_HOST: ${{ secrets.SSH_HOST_PABLIC_1 }}
-        SSH_USER: ${{ secrets.SSH_USER_TEST }}
+        SSH_USER: ${{ secrets.SSH_USER_PABLIC_1 }}
       run: |
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "
         docker pull nevojt/api_test:latest;
