--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -124,10 +124,10 @@ jobs:
         docker stop api_test_4 || true;
         docker rm api_test_4 || true;
         
-        docker run -d --name api_test_1 --env-file /pablic/test/api/.env -p 8000:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
-        docker run -d --name api_test_2 --env-file /pablic/test/api/.env -p 8001:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
-        docker run -d --name api_test_3 --env-file /pablic/test/api/.env -p 8002:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
-        docker run -d --name api_test_4 --env-file /pablic/test/api/.env -p 8003:8000 --cpus="1" --memory="512m" nevojt/api_test:latest
+        docker run -d --name api_test_1 --env-file /home/pablic/api/.env -p 8000:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
+        docker run -d --name api_test_2 --env-file /home/pablic/api/.env -p 8001:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
+        docker run -d --name api_test_3 --env-file /home/pablic/api/.env -p 8002:8000 --cpus="1" --memory="512m" nevojt/api_test:latest;
+        docker run -d --name api_test_4 --env-file /home/pablic/api/.env -p 8003:8000 --cpus="1" --memory="512m" nevojt/api_test:latest
         "
 
     - name: Deploy to Server pablic 2
