--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,9 +70,9 @@ jobs:
              
 
 
-    - name: Run Tests
-      run: |
-         pytest
+   # - name: Run Tests
+    #  run: |
+     #    pytest
 
 
 
