--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiosmtplib>=2.0,<3.0
+aiosmtplib==2.0.2
 annotated-types==0.7.0
 anyio==4.4.0
 APScheduler==3.10.4
@@ -14,7 +14,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorclass==2.2.2
-cryptography==42.0.8
+cryptography==43.0.1
 deprecation==2.1.0
 distro==1.9.0
 dnspython==2.6.1
@@ -24,8 +24,8 @@ email_validator==2.2.0
 enumb==0.1.5
 exceptiongroup==1.2.2
 expo==0.1.2
-faker==30.1.0
-fastapi==0.111.1
+Faker==30.1.0
+fastapi==0.115.0
 fastapi-cli==0.0.4
 fastapi-mail==1.4.1
 google-api-core==2.19.1
@@ -37,6 +37,7 @@ google-resumable-media==2.7.1
 googleapis-common-protos==1.63.2
 gotrue==2.5.5
 greenlet==3.0.3
+gTTS==2.5.3
 gunicorn==22.0.0
 h11==0.14.0
 h2==4.1.0
@@ -48,12 +49,13 @@ hyperframe==6.0.1
 idna==3.7
 iniconfig==2.0.0
 Jinja2==3.1.4
+jiter==0.5.0
 logfury==1.0.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mimetype==0.1.5
-openai==1.37.1
+openai==1.51.0
 orjson==3.10.6
 packaging==24.1
 passlib==1.7.4
@@ -68,9 +70,9 @@ psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
-pydantic==2.8.2
-pydantic-settings==2.3.4
-pydantic_core==2.20.1
+pydantic==2.9.2
+pydantic-settings==2.5.2
+pydantic_core==2.24.0
 Pygments==2.18.0
 pyproject_hooks==1.1.0
 pytest==8.2.2
@@ -79,6 +81,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
+pyttsx3==2.91
 pytz==2024.1
 PyYAML==6.0.1
 realtime==1.0.6
@@ -89,7 +92,7 @@ setuptools==70.3.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.31
+SQLAlchemy==2.0.35
 starlette==0.37.2
 storage3==0.7.7
 StrEnum==0.4.15
@@ -104,7 +107,7 @@ typing_extensions==4.12.2
 tzlocal==5.2
 ujson==5.10.0
 urllib3==2.2.2
-uvicorn==0.30.1
+uvicorn==0.31.0
 uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
