--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,10 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-.env*
-sinuous-grove-405612-a7d9d516c960.json
+
+#sinuous-grove-405612-a7d9d516c960.json
 #app/_log
-users_data.json
+#users_data.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -57,9 +57,8 @@ cover/
 
 #  Castom
 *.png
-start_uvicorn
+#start_uvicorn
 
-start_uvicorn
 # Translations
 *.mo
 *.pot
