--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ fastapi==0.115.4
 fastapi-limiter==0.1.6
 fastapi-mail==1.4.1
 greenlet==3.1.1
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
