--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ aioredis==2.0.1
 aiosmtplib==2.0.2
 annotated-types==0.7.0
 anyio==4.6.2.post1
-apscheduler==3.10.4
+APScheduler==3.10.4
 async-timeout==5.0.1
 asyncpg==0.30.0
 b2sdk==2.6.0
+bcrypt==4.2.0
 blinker==1.8.2
 certifi==2024.8.30
 cffi==1.17.1
@@ -15,20 +16,21 @@ cryptography==43.0.3
 distro==1.9.0
 dnspython==2.7.0
 ecdsa==0.19.0
-email-validator==2.2.0
-faker==30.8.2
+email_validator==2.2.0
+Faker==30.8.2
 fastapi==0.115.4
 fastapi-limiter==0.1.6
 fastapi-mail==1.4.1
 greenlet==3.1.1
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
-jinja2==3.1.4
+Jinja2==3.1.4
 jiter==0.7.0
 logfury==1.0.1
-markupsafe==3.0.2
+MarkupSafe==3.0.2
 openai==1.54.2
 pillow==11.0.0
 psycopg2==2.9.10
@@ -36,9 +38,9 @@ psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.2
-pydantic-core==2.23.4
 pydantic-settings==2.6.1
-pyjwt==2.9.0
+pydantic_core==2.23.4
+PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
@@ -49,12 +51,13 @@ requests==2.32.3
 rsa==4.9
 ruff==0.7.2
 sentry-sdk==2.18.0
+setuptools==75.6.0
 six==1.16.0
 sniffio==1.3.1
-sqlalchemy==2.0.36
+SQLAlchemy==2.0.36
 starlette==0.41.2
 tqdm==4.67.0
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 tzlocal==5.2
 urllib3==2.2.3
 uvicorn==0.32.0
