--- a/gunicorn.service
+++ b/gunicorn.service
@@ -5,10 +5,10 @@ After=network.target
 [Service]
 User=dmytro
 Group=dmytro
-WorkingDirectory=/home/dmytro/project
-Environment="PATH=/home/dmytro/project/venv/bin"
-EnvironmentFile=/home/dmytro/project/.env
-ExecStart=/home/dmytro/project/venv/bin/gunicorn -w 6 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:8000
+WorkingDirectory=/home/dmytro/api
+Environment="PATH=/home/dmytro/api/.venv/bin"
+EnvironmentFile=/home/dmytro/api/.env
+ExecStart=/home/dmytro/api/.venv/bin/gunicorn -w 6 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:8000
 
 [Install]
 WantedBy=multi-user.target
